--- a/todoapp/public/css/style.css
+++ b/todoapp/public/css/style.css
@@ -23,9 +23,10 @@ body{
     background: linear-gradient(126deg, rgba(39,168,17,1) 0%, rgba(25,92,14,1) 50%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#27a811",endColorstr="#195c0e",GradientType=1);
     min-height: 100vh;
+    padding: 20px;
 }
 
-main, body, header, .task{
+main, body, header, .task, .create, .form-task{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,6 +67,21 @@ header {
     margin: 1.5em 0 1.5em 0;
 }
 
+.form-task{
+    flex-direction: row;
+}
+
+.create form div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.create form .form-control{
+    margin-right: 10px;
+}
+
 .form-container{
     display: flex;
     justify-content: center;
@@ -95,6 +111,10 @@ header {
     width: 100%;
 }
 
+.form-control{
+    text-align: left;
+}
+
 #task-sort option, #task-type option{
     text-align: left;
 }
@@ -115,5 +135,6 @@ input:checked + label
 }
 
 .task-list{
-    overflow-x: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
