Can now register account with password to database in secrets.  Also added error handling to tell user if username already exists.

--- a/Secrets/views/register.ejs
+++ b/Secrets/views/register.ejs
@@ -1,7 +1,11 @@
 <%- include('partials/header') %>
 <div class="container mt-5">
   <h1>Register</h1>
-
+  <% if(locals.error) {%> 
+    <% if(error === "users_username_key") {%>
+      <h2>Error: This email has already been registered, try another one.</h2> 
+    <% } %>
+  <% } %>
   <div class="row">
     <div class="col-sm-8">
       <div class="card">
