--- a/Secrets/views/login.ejs
+++ b/Secrets/views/login.ejs
@@ -2,7 +2,11 @@
 
 <div class="container mt-5">
   <h1>Login</h1>
-
+  <% if(locals.error) {%> 
+    <% if(error === "users_username_key") {%>
+      <h2>Error: Username or password is incorrect.</h2> 
+    <% } %>
+  <% } %>
   <div class="row">
     <div class="col-sm-8">
       <div class="card">
