--- a/Secrets/views/login.ejs
+++ b/Secrets/views/login.ejs
@@ -3,9 +3,7 @@
 <div class="container mt-5">
   <h1>Login</h1>
   <% if(locals.error) {%> 
-    <% if(error === "users_username_key") {%>
-      <h2>Error: Username or password is incorrect.</h2> 
-    <% } %>
+    <h2><%= error %></h2>
   <% } %>
   <div class="row">
     <div class="col-sm-8">
@@ -13,14 +11,14 @@
         <div class="card-body">
 
           <!-- Makes POST request to /login route -->
-          <form action="/login" method="POST">
+          <form action="/login" method="POST" autocomplete="off">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <input type="email" class="form-control" name="username" autocomplete="off">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control" name="password" autocomplete="off">
             </div>
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
