--- a/Secrets/views/register.ejs
+++ b/Secrets/views/register.ejs
@@ -12,14 +12,14 @@
         <div class="card-body">
 
           <!-- Makes POST request to /register route -->
-          <form action="/register" method="POST">
+          <form action="/register" method="POST" autocomplete="off">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <input type="email" class="form-control" name="username" autocomplete="off">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control" name="password" autocomplete="off">
             </div>
             <button type="submit" class="btn btn-dark">Register</button>
           </form>
