Added dotenv to practice storing information that may be needed to be kept secret.

--- a/Secrets/views/register.ejs
+++ b/Secrets/views/register.ejs
@@ -4,6 +4,8 @@
   <% if(locals.error) {%> 
     <% if(error === "users_username_key") {%>
       <h2>Error: This email has already been registered, try another one.</h2> 
+    <% } else {%>
+      <h2>Error: Could not register user. <%= error %></h2>
     <% } %>
   <% } %>
   <div class="row">
