--- a/Secrets/views/secrets.ejs
+++ b/Secrets/views/secrets.ejs
@@ -3,8 +3,12 @@
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">Jack Bauer is my hero.</p>
+    <h1 class="display-3">Welcome to everyones darkest secrets!</h1>
+    <%  if(locals.secrets) { %>
+      <% for (let index = 0; index < secrets.length; index++) { const el = secrets[index]; %>
+        <p class="secret-text"><%= el.secret %></p>
+      <% } %>
+    <% } %>
     <hr>
     
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
