Added create view and form input
Added create view where user can input data about a book and submit the form!

the form has yet to be handled though

Changed header ejs partial to make it dynamically display the corresponding css file for the current web page

--- a/book_reviews/views/partials/header.ejs
+++ b/book_reviews/views/partials/header.ejs
@@ -3,4 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <% if(locals.curWebPage) { %>
+        <link rel="stylesheet" href="styles/<%= curWebPage %>.css">
+    <% } %>
     <title>My book reviews</title>
+</head>
