--- a/book_reviews/views/index.ejs
+++ b/book_reviews/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header.ejs") %>
-<link rel="stylesheet" href="/styles/index.css">
-</head>
 <body>
-    
+    <form action="create" method="get">
+        <button type="submit">Create review!</button>
+    </form>
 </body>
 </html>
