--- a/book_reviews/views/create_review.ejs
+++ b/book_reviews/views/create_review.ejs
@@ -1,15 +1,15 @@
 <%- include("partials/header.ejs") %>
 <body>
     <form action="create" method="post">
-        <input type="text" placeholder="Title" required>
-        <input type="text" placeholder="Authors" required>
-        <input type="number" placeholder="IBSN" required>
+        <input name="title" type="text" placeholder="Title" required>
+        <input name="authors" type="text" placeholder="Authors" required>
+        <input name="ibsn" type="number" placeholder="IBSN" required>
 
         <div class="date-input-container">
             <h1>Date Read</h1>
-            <input type="number" placeholder="Year" required>
-            <input type="number" placeholder="Month" required>
-            <input type="number" placeholder="Day" required> 
+            <input name="year" type="number" placeholder="Year" max="<%= new Date().getFullYear() %>" required>
+            <input name="month" type="number" placeholder="Month" max="12" required>
+            <input name="day" type="number" placeholder="Day" max="31" required> 
         </div>
 
         <button type="submit">Create review!</button>
