--- a/book_reviews/views/index.ejs
+++ b/book_reviews/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header.ejs") %>
 <body>
     <form action="create" method="get">
-        <button type="submit">Create review!</button>
+        <button type="submit">Make your own review!</button>
     </form>
 </body>
 </html>
