--- a/book_reviews/views/create_review.ejs
+++ b/book_reviews/views/create_review.ejs
@@ -1,9 +1,11 @@
 <%- include("partials/header.ejs") %>
 <body>
     <form action="create" method="post">
-        <input name="title" type="text" placeholder="Title" required>
-        <input name="authors" type="text" placeholder="Authors" required>
-        <input name="ibsn" type="number" placeholder="IBSN" required>
+        <div class="book-information">
+            <input name="title" type="text" placeholder="Title" required>
+            <input name="authors" type="text" placeholder="Authors" required>
+            <input name="ibsn" type="number" placeholder="IBSN" required>
+        </div>
 
         <div class="date-input-container">
             <h1>Date Read</h1>
@@ -12,7 +14,25 @@
             <input name="day" type="number" placeholder="Day" max="31" required> 
         </div>
 
+        <div class="review-text">
+            <textarea name="review" placeholder="Type your review here!" required></textarea>
+        </div>
+
+        <div class="review-stars">
+            <!-- Javascript needed. Ex: If user checks checkbox 3 for a 3 star review, the previous checkboxes should get checked as-well -->
+            <input id="1" type="checkbox">
+            <input id="2" type="checkbox">
+            <input id="3" type="checkbox">
+            <input id="4" type="checkbox">
+            <input id="5" type="checkbox">
+        </div>
+
         <button type="submit">Create review!</button>
     </form>
 </body>
+
+<script>
+    // Logic for checkboxes should go here
+</script>
+
 </html>
