Fetched book reviews now displayed in index.ejs
yep, thats it!

--- a/book_reviews/views/index.ejs
+++ b/book_reviews/views/index.ejs
@@ -1,5 +1,11 @@
 <%- include("partials/header.ejs") %>
 <body>
+    <% if(locals.bookReviews) {%>
+        <%- include("partials/book_review.ejs", { bookReviews: bookReviews }) %>    
+    <% } else {%>
+        <h1>bruh why</h1>
+    <% } %>
+
     <form action="create" method="get">
         <button type="submit">Make your own review!</button>
     </form>
