Added variable in index.js, added files for navbar
Created a variable that keeps track of the current webpage the user is on.

Added js, css, and ejs files for the websites navbar

Set up so navbar is able to be insert and done for every future webpage

--- a/book_reviews/views/index.ejs
+++ b/book_reviews/views/index.ejs
@@ -1,13 +1,11 @@
 <%- include("partials/header.ejs") %>
 <body>
+    <%- include("partials/navbar.ejs") %>
     <% if(locals.bookReviews) {%>
         <%- include("partials/book_review.ejs", { bookReviews: bookReviews }) %>    
     <% } else {%>
         <h1>bruh why</h1>
     <% } %>
-
-    <form action="create" method="get">
-        <button type="submit">Make your own review!</button>
-    </form>
 </body>
+<script src="js/navbar.js"></script>
 </html>
