Renamed/created files, worked on navbar sort
Renamed index.ejs to home.ejs as well as its respective css file to home.css.

This change is also reflected in the index.js file which is the controller of this site

Renamed some values in the navbar select html element

navbar now stores the current sorting method defined by the user in local storage so that other files can handle sorting the book reviews on their respective site pages

--- a/book_reviews/views/partials/navbar.ejs
+++ b/book_reviews/views/partials/navbar.ejs
@@ -15,10 +15,11 @@
         </form>
     </div>
     <div class="sort-method-container">
-        <select name="sort_method">
-            <option value="alphabet_asc">Alphabetical order</option>
-            <option value="rating_asc">Highest rated</option>
-            <option value="rating_desc">Lowest rated</option>
+        <label for="sort-menu">Sort reviews:</label>
+        <select id="sort-menu" name="sort_method">
+            <option value="rating_desc" selected>Highest rated</option>
+            <option value="rating_asc">Lowest rated</option>
+            <option value="alphabet_desc">Alphabetical order</option>
             <option value=""></option>
         </select>
     </div>
