--- a/book_reviews/views/partials/navbar.ejs
+++ b/book_reviews/views/partials/navbar.ejs
@@ -17,10 +17,8 @@
     <div class="sort-method-container">
         <label for="sort-menu">Sort reviews:</label>
         <select id="sort-menu" name="sort_method">
-            <option value="rating_desc" selected>Highest rated</option>
-            <option value="rating_asc">Lowest rated</option>
-            <option value="alphabet_desc">Alphabetical order</option>
-            <option value=""></option>
+            <option value="highest_rated">Highest rated</option>
+            <option value="lowest_rated">Lowest rated</option>
         </select>
     </div>
 </div>
