Fixed some naming conventions
Fixed bug in sort_reviews.js where variables were not being referenced or passed through functions properly

Fixed text in html on navbar

--- a/book_reviews/views/partials/navbar.ejs
+++ b/book_reviews/views/partials/navbar.ejs
@@ -6,7 +6,7 @@
     </div>
     <div class="full-list-container">
         <form action="/full-list" method="get">
-            <button type="submit">Featured</button>
+            <button type="submit">Full list</button>
         </form>
     </div>
     <div class="create-container">
