User can now create posts to database
--CHANGELOG--

- Moved create get route to app.js

- Moved create post route to app.js, this now handles sending the front end form data to server.js for insertion into database

- Created /review route that app.js sends front end form data to. This route inserts the front end data into our database in their respective tables

--- a/book_reviews/views/partials/navbar.ejs
+++ b/book_reviews/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
         </form>
     </div>
     <div class="create-container">
-        <form action="create" method="get">
+        <form action="/create" method="get">
             <button type="submit">Create review</button>
         </form>
     </div>
