Revert "User can now create posts to database"
This reverts commit 7d31cd40012f501e07d1b321aafd9a77190cfef6.

--- a/book_reviews/views/create_review.ejs
+++ b/book_reviews/views/create_review.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %>
 <body>
-    <form class="review-form" autocomplete="off" action="/create" method="post">
+    <form class="review-form" autocomplete="off" action="create" method="post">
         <div class="book-information">
             <input name="title" type="text" placeholder="Title" required>
             <input name="authors" type="text" placeholder="Authors" required>
