Created full list page/routing
There is now a get route for the full_list page which displays every book review in the database!

--- a/book_reviews/views/full_list.ejs
+++ b/book_reviews/views/full_list.ejs
@@ -2,7 +2,7 @@
 <body>
     <%- include("partials/navbar.ejs") %>
     <% if(locals.bookReviews) {%>
-        <div class="book-review-container featured">
+        <div class="book-review-container">
             <%- include("partials/book_review.ejs", { bookReviews: bookReviews }) %>    
         </div>
     <% } else {%>
