Created general.css and nav styling
--CHANGELOG--

- Imported needed fonts through header.ejs partial

- Created general.css which holds common classes that will be used on many pages. these classes include fonts, basic flex formatting, and more.

- Styled/animated nav bar button. It's now a coolio animated hamburger menu button!

- Did some basic formatting and styling of nav menu but not finished yet!

--- a/book_reviews/views/partials/header.ejs
+++ b/book_reviews/views/partials/header.ejs
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My book reviews</title>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Public+Sans&family=Rubik:wght@700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Public+Sans&family=Rubik:wght@700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <% if(locals.curWebPage) { %>
         <link rel="stylesheet" href="styles/<%= curWebPage %>.css">
     <% } %>
-    <title>My book reviews</title>
+    
 </head>
