Animated nav menu
--CHANGELOG--

- Animated nav-menu with css and javascript, styling still incomplete

--- a/book_reviews/views/partials/navbar.ejs
+++ b/book_reviews/views/partials/navbar.ejs
@@ -4,23 +4,23 @@
     <span></span>
 </div>
 
-<div class="flex-box-column hidden" id="nav-bar">
-    <div class="nav-option " id="featured-container">
+<div class="flex-box-column hidden" id="nav-menu">
+    <div class="nav-option off" id="featured-container">
         <form action="/" method="get">
             <button type="submit" class="dm-sans-large-bold nav-option">Home</button>
         </form>
     </div>
-    <div class="nav-option " id="full-list-container">
+    <div class="nav-option off" id="full-list-container">
         <form action="/full-list" method="get">
             <button type="submit" class="dm-sans-large-bold nav-option">Full list</button>
         </form>
     </div>
-    <div class="nav-option " id="create-container">
+    <div class="nav-option off" id="create-container">
         <form action="create" method="get">
             <button type="submit" class="dm-sans-large-bold nav-option">Create review</button>
         </form>
     </div>
-    <div class="nav-option " id="sort-method-container">
+    <div class="nav-option off" id="sort-method-container">
         <label for="sort-menu" class="dm-sans-large-bold">Sort reviews:</label>
         <select id="sort-menu" name="sort_method">
             <option value="highest_rated" class="dm-sans-large-bold">Highest rated</option>
