--- a/book_reviews/public/styles/navbar.css
+++ b/book_reviews/public/styles/navbar.css
@@ -4,21 +4,23 @@
     left: 10px;
     width: 60px;
     height: 45px;
+    z-index: 10;
     cursor: pointer;
     transform: rotate(0deg);
     transition: .5s ease-in-out;
 }
 
-#nav-bar {
+#nav-menu {
     position: fixed;
-    height: 100%;
+    height: 0%;
     width: 100%;
     top: 0px;
     left: 0px;
     background-color: black;
+    transition: .5s ease-in-out;
 }
 
-#nav-bar * {
+#nav-menu * {
     color: white;
 }
 
@@ -67,8 +69,23 @@
     left: 8px;
 }
 
+#nav-menu.open {
+    height: 100%;
+}
+
 .nav-option {
     background: none;
-    margin: 5px;
+    margin: 10px;
+    padding: 0px;
     border: none;
+    cursor: pointer;
+    opacity: 100;
+    transition: .5s linear;
 }
+
+.nav-option.off {
+    opacity: 0;
+    transition: .1s linear;
+    padding-right: 20px;
+}
+
